# stockscreen

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
emitent-service/: Cargo.toml  Dockerfile
emitent-service/proto/: emitent.proto
emitent-service/src/: emitent.rs  integration_events.rs  main.rs  repository.rs  server.rs
gateway/: Dockerfile  README.md  envoy.yaml
proto/: emitent.proto
src/: client.rs  main.rs  report.rs  server.rs  yahoo_provider.rs
web-seed/: Cargo.toml  Dockerfile  Makefile.toml  build.rs
web-seed/src/: lib.rs
