[package]
name = "stockskreen"
version = "0.1.0"
authors = ["artk11 <astk11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.18", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }