[package]
name = "emitent-service"
version = "0.1.0"
authors = ["hageshtrem <hageshtrem@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.20", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.11", features = ["serde"] }
tonic = "0.2"
prost = "0.6"
mongodb = "0.9.2"
bson = "0.14.1"
futures = "0.3"
async-trait = "0.1.31"

#[[bin]] # Bin to run the HelloWorld gRPC server
#name = "server"
#path = "src/server.rs"

#[[bin]]
#name = "client"
#path = "src/client.rs"

[build-dependencies]
tonic-build = "0.2"
